# server_C-_intrinsics

./: 0325  CMakeLists.txt  Env.h.in  MakefilePostgres  Poisson.txt  Untitled-1.sql  asm.asm  asm.cpp  data.txt  dump.rdb  fileopen.h  hello  lib.cpp  llvm-mca  main.cpp  multi_threader.S  multi_threader.cpp  output.cereal  postgres Session.sql  postgres.cpp  postgres2.cpp  putintrashafteruse  putintrashafteruse.cpp  redis_cluster_kill.sh  redis_cluster_start.sh  redisi.cpp  sample.txt  sql_cheat_sheet.sql  test.cpp  test.sql  wherehbf.sh
.history/: multi_threader_20200318112408.cpp  multi_threader_20200318112951.cpp  multi_threader_20200318113056.cpp  multi_threader_20200318113057.cpp  multi_threader_20200318113209.cpp  multi_threader_20200318113227.cpp  multi_threader_20200318113228.cpp  multi_threader_20200318113229.cpp  multi_threader_20200318113233.cpp  multi_threader_20200318113234.cpp  multi_threader_20200318113235.cpp  multi_threader_20200318113236.cpp  multi_threader_20200318113237.cpp  multi_threader_20200318113238.cpp  multi_threader_20200318113317.cpp  multi_threader_20200318113342.cpp  multi_threader_20200318113351.cpp  multi_threader_20200318113352.cpp  multi_threader_20200318113353.cpp  multi_threader_20200318113354.cpp  multi_threader_20200318113355.cpp  multi_threader_20200318113357.cpp  multi_threader_20200318113433.cpp  multi_threader_20200318113434.cpp  multi_threader_20200318113510.cpp  multi_threader_20200318113517.cpp  multi_threader_20200318113518.cpp  multi_threader_20200318113519.cpp  multi_threader_20200318113645.cpp  multi_threader_20200318113646.cpp  multi_threader_20200318113647.cpp  multi_threader_20200318113648.cpp  multi_threader_20200318113649.cpp  multi_threader_20200318113650.cpp  multi_threader_20200318113651.cpp  multi_threader_20200318113655.cpp  multi_threader_20200318113707.cpp  multi_threader_20200318113708.cpp  multi_threader_20200318113714.cpp  multi_threader_20200318113715.cpp  (+1242 more)
Redis_cluster/: listOfFiles.list  nodes.conf  readme
Redis_cluster/node1/: dump.rdb  node1.conf  nodes.conf  sentinel.conf
Redis_cluster/node4/: node4.conf  nodes.conf
Redis_cluster/node7/: node7.conf  nodes.conf
dump/: multi_threader.cpp  myOptFile.yaml  readme
dump/html/: _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_atomic.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_alloc_traits.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_allocator.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_atomic_base.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_basic_ios.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_char_traits.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_deque.tcc.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_locale_facets.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_move.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_std_mutex.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_stl_algobase.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_stl_bvector.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_stl_construct.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_stl_deque.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_stl_iterator.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_stl_iterator_base_funcs.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_stl_pair.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_stl_queue.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_stl_uninitialized.h.html  _usr_bin_.._lib_gcc_x86_64-linux-gnu_9_.._.._.._.._include_c++_9_bits_stl_vector.h.html  (+15 more)
embeded/: start.c
express-server/: .env  app.js  cert.pem  key.pem  package-lock.json  package.json
gpu_layer/: Makefile  main  main.cu  matrix.cu  pinned  pinnedMemory.cu
keep_alive/: keep_alive.cpp
postgres_cert/: postgresql.crt  postgresql.csr  postgresql.key
segmentTreeModule/: segmentedTree.cpp
seralized_types/: array_module.cpp  recive_seralizer.hpp  send_seralizer.hpp  seralizing_header.hpp  seralizing_lib.cpp  vertualized_terminal.cpp
socket_thread_layer/: Makefile  build-run.sh  client.cpp  socket.cpp  text.cpp
src/: Penguin.cpp
test/: app.js  package-lock.json  package.json
test_cases/: textfile.txt
testing/: CMakeLists.txt  PenguinTest.cpp  test.cpp
threader/: Penguin.hpp  lib.hpp  multi_threader.hpp
utilites/: deliminate.cpp
wasim_generated/: index.html  module.js  module.wasm
(+194 files in other folders)
